# era-v4-session-2

./: README.md  TESTING_GUIDE.md  integration_test.py  test_upload.html
demo-webapp/: .env.example  next.config.js  package.json
demo-webapp/app/: layout.tsx  page.tsx
demo-webapp/app/animals/[animal]/: page.tsx
demo-webapp/app/upload/: page.tsx
demo-webapp/lib/: animals.ts
fastapi-image-server/: README.md  cert.pem  key.pem  main.py  pyproject.toml  test_api.py
